# Conduit

./: .gitignore  .gitmodules  CMakeLists.txt  README.m  README.md  buildConfig.h.in  meson.build  meson.options
examples/: CMakeLists.txt  meson.build
examples/sandbox/: CMakeLists.txt  meson.build
examples/sandbox/src/: sandbox.cpp
include/: meson.build
include/conduit/: application.h  assert.h  defines.h  exception.h  logging.h  time.h
include/conduit/assets/: assetHandle.h  assetInfo.h  assetStorage.h  assetsManager.h  assetsManagerException.h  assetsTypeFuns.h  handle.h  mesh.h  shader.h  texture.h
include/conduit/components/: transform.h
include/conduit/config/: configException.h  engineConfig.h
include/conduit/core/: logger.h
include/conduit/ecs/: commandBuffer.h  componentAccess.h  entity.h  query.h  queryElement.h  world.h
include/conduit/events/: eventBus.h  eventKeyCode.h  eventReader.h  eventWriter.h  events.h
include/conduit/internal/: logger.h
include/conduit/internal/assets/: assetLoaderFuns.h  assetLocation.h  assetLocator.h  assetParser.h  assetParserFuns.h  assetStorage.h  assetsCache.h
include/conduit/internal/core/: deleteQueue.h  hash.h
include/conduit/internal/ecs/: QueryTypeRegister.h  componentBuffer.h  componentRegister.h  entityRegister.h  queryRegister.h  queryStorage.h  typeRegister.h
include/conduit/internal/events/: callbackBuffer.h  callbackRegister.h  eventBuffer.h  eventRegister.h  typeRegister.h
include/conduit/internal/renderer/graph/: resourceRegister.h
include/conduit/renderer/: ResourceRef.h  backendEnum.h  buffer.h  gpuResourceRef.h  image.h  packet.h  renderer.h  rendererException.h  shaderModule.h  vertex.h  vertexLayout.h
include/conduit/renderer/graph/: graph.h  passBuilders.h  passes.h  resources.h
include/conduit/renderer/renderGraph/: renderGraph.h
include/conduit/renderer/shader/: program.h  programBuilder.h
include/conduit/window/: window.h  windowException.h
pch/: cndtPch.h  libPch.h  stdlibPch.h
resources/: CMakeLists.txt  builtin_table.json  settings.json
resources/shaders/: CMakeLists.txt  builtin.vert  meson.build
resources/shaders/vulkan/: CMakeLists.txt  builtin.vert
src/: CMakeLists.txt  meson.build
src/assets/: assetInfoParsers.cpp  assetLoader.cpp  assetLoaderFuns.cpp  assetManager.cpp  assetParserFuns.cpp  assetTableNameFuns.cpp  meshAssetFuns.cpp  shaderAssetFuns.cpp  textureAssetFuns.cpp
src/config/: engineConfig.cpp
src/core/: appRunner.cpp  appRunner.h  application.cpp  application.h  assert.cpp  assert.h  deleteQueue.cpp  deleteQueue.h  logging.cpp  logging.h  time.cpp
src/ecs/: commandBuffer.cpp  componentRegister.cpp  entityRegister.cpp  world.cpp
src/events/: eventCallback.cpp  eventRegister.cpp  eventSystem.cpp
src/platform/: entryPoint.cpp
src/renderer/: buffer.cpp  programBuilder.cpp  renderer.cpp
src/renderer/graph/: graph.cpp  passBuilder.cpp  resourceRegister.cpp
src/renderer/opengl/: glRenderer.cpp  glRenderer.h
src/renderer/opengl/shaders/: glShaderProgram.cpp  glShaderProgram.h  glShaderProgramBuilder.cpp  glShaderProgramBuilder.h
src/renderer/opengl/utils/: glExceptions.h
src/renderer/vulkan/: deleteQueue.cpp  deleteQueue.h  renderer.h  vkCommandBuffer.cpp  vkCommandBuffer.h  vkCommandPool.cpp  vkCommandPool.h  vkContext.cpp  vkContext.h  vkDevice.cpp  vkDevice.h  vkDeviceConverter.cpp  vkExceptions.h  vkRenderAttachment.h  vkRenderPass.cpp  vkRenderPass.h  vkRenderer.cpp  vkRenderer.h  vkSwapChain.cpp  vkSwapChain.h  vkTypes.h  vkUniformData.h  vkUtils.h
src/renderer/vulkan/descriptor/: vkDescriptorAllocator.cpp  vkDescriptorAllocator.h  vkDescriptorLayout.cpp  vkDescriptorLayout.h  vkDescriptorWriter.cpp  vkDescriptorWriter.h
src/renderer/vulkan/initialization/: vkContext.cpp  vkContext.h  vkDevice.cpp  vkDevice.h  vkSwapChain.h  vkValidation.cpp  vkValidation.h
src/renderer/vulkan/pipelines/: vkPipeline.cpp  vkPipeline.h  vkShaderModule.h  vkShaderProgram.cpp  vkShaderProgram.h  vkShaderProgramBuilder.cpp  vkShaderProgramBuilder.h
src/renderer/vulkan/storage/: vkBuffer.cpp  vkBuffer.h  vkGeometryBuffer.h  vkImage.cpp  vkImage.h
src/renderer/vulkan/sync/: vkFence.cpp  vkFence.h
src/renderer/vulkan/utils/: deleteQueue.cpp  vkAttributeDescriptor.cpp  vkAttributeDescriptor.h  vkExceptions.h  vkUtils.h  vkValidation.cpp
src/window/glfw/: glfwCallbacks.cpp  glfwOpenGL.cpp  glfwVulkan.cpp  glfwWindow.cpp  glfwWindow.h
subprojects/: catch.wrap
tests/: CMakeLists.txt  meson.build
tests/ecs/: CMakeLists.txt  component.cpp  entity.cpp  meson.build  world.cpp
tests/events/: CMakeLists.txt  callbacks.cpp  events.cpp  meson.build
tests/pch/: testPch.h
