# Event systems source files
event_src = [
    'events/eventSystem.cpp',
    'events/eventCallback.cpp',
    'events/eventRegister.cpp'
]

# Engine core source files
core_src = [
    'core/logging.cpp', 
    'core/application.cpp',
]

# Platform specific code source files
platform_src = [
    'platform/entryPoint.cpp'    
]

# Define the engine_source variable
engine_source = files([
    core_src,
    event_src,
    platform_src
])
