# Event systems source files
event_src = [
    'events/eventSystem.cpp',
    'events/eventCallback.cpp',
    'events/eventRegister.cpp'
]

# Engine core source files
core_src = [
    'core/logging.cpp', 
    'core/time.cpp', 
    'core/assert.cpp', 
    'core/application.cpp',
]

# Engine window source code
window_src = [
    'window/glfw/glfwWindow.cpp',
    'window/glfw/glfwCallbacks.cpp'
]

# Platform specific code source files
platform_src = [
    'platform/entryPoint.cpp'    
]

# Define the engine_source variable
engine_source = files([
    core_src,
    event_src,
    window_src,
    platform_src
])
